[gd_scene load_steps=10 format=2]

[ext_resource path="res://characters/CharacterMover.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/PickupManager.tscn" type="PackedScene" id=2]
[ext_resource path="res://characters/Player.gd" type="Script" id=3]
[ext_resource path="res://characters/HealthManager.tscn" type="PackedScene" id=4]
[ext_resource path="res://characters/player_parts/PlayerVisuals.tscn" type="PackedScene" id=5]
[ext_resource path="res://characters/CameraRig.tscn" type="PackedScene" id=6]
[ext_resource path="res://characters/DamageArea.gd" type="Script" id=7]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5

[sub_resource type="BoxShape" id=2]

[node name="Player" type="KinematicBody" groups=["player"]]
collision_layer = 6
collision_mask = 3
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
shape = SubResource( 1 )

[node name="Graphics" type="Spatial" parent="."]

[node name="PlayerVisuals" parent="Graphics" instance=ExtResource( 5 )]

[node name="Camera3rdPerson" parent="." instance=ExtResource( 6 )]
mouse_control = false
upper_y_limit = -0.1

[node name="Camera1stPerson" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, 0 )
visible = false

[node name="CharacterMover" parent="." instance=ExtResource( 1 )]
move_accel = 2
max_speed = 10
jump_force = 10

[node name="HealthManager" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="PickupManager" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="PlayerUI" type="CanvasLayer" parent="."]

[node name="DamageAreaRight" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="DamageAreaRight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0 )
shape = SubResource( 2 )

[node name="DamageAreaLeft" type="Area" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1, 0 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="DamageAreaLeft"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0 )
shape = SubResource( 2 )
